--- a/NoNameGNSS/NoNameGNSS.vcxproj.filters
+++ b/NoNameGNSS/NoNameGNSS.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ReadRINEX.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataStruct.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ReadRINEX.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
